apps/pypiserver/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: pypiserver
  namespace: pypiserver
  labels:
    app: pypiserver
spec:
  type: ClusterIP
  ports:
    - port: 8080
      protocol: TCP
      name: pypiserver
      targetPort: 8080
  selector:
    app: pypiserver
