apps/pypiserver/ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: pypiserver
  namespace: pypiserver
  labels:
    app: pypiserver
  annotations:
      certmanager.k8s.io/cluster-issuer: "internal"
      kubernetes.io/ingress.class: "nginx-internal"
      nginx.ingress.kubernetes.io/proxy-body-size: "0"
      prometheus.io/probe: "true"
spec:
  rules:
    - host: pypi.k8s.grigri
      http:
        paths:
          - path: /
            backend:
              serviceName: pypiserver
              servicePort: 8080
  tls:
    - hosts:
      - pypi.k8s.grigri
      secretName: pypiserver-tls
